2.2.0 — production-hardening release
Promotes the [Unreleased] CHANGELOG section (production-hardening pass:
Themes A-J + Path A back-fill + Path B C1 + opt-in PgConfig.withRedactor)
to [2.2.0], folded in with the Path C audit response (closing the
redactor JSON-escape bypass, reframing C1's actual reach, documenting
the same-UID bind/accept assumption, configurable subprocess startup
timeout, listener double-close cleanup, half a dozen javadoc honesty
fixes).

Breaking changes for direct canonical-constructor and silent-loop-retry
callers (acceptable under the clean-slate-when-internal posture):
- JvmSandboxConfig record gained a fourth component (subprocessStartupTimeout)
- SecretRegistry.register() refuses JSON-special bytes (control chars, ", \\)
- FinishReason.LENGTH terminates the loop instead of silently re-issuing
- RuntimeServer.Builder defaults to 127.0.0.1 instead of 0.0.0.0
- SSE event emit is bounded with drop-on-overflow instead of blocking

13 published / example pom.xml files bumped 2.1.2 → 2.2.0. Verified
local: mvn install -DskipTests -U; mvn javadoc:jar -DskipTests on the
nine published modules; mvn test on core, session, persistence, repl
plus transitive deps.